--- a/springboot-jpa/src/main/resources/application.properties
+++ b/springboot-jpa/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 
+#数据库jdbc连接url地址,serverTimezone设置数据库时区东八区
+spring.datasource.url=jdbc:mysql://localhost:3306/SpringBootTest?serverTimezone=GMT%2B8
+#数据库账号
+spring.datasource.username=root
+#数据库密码
+spring.datasource.password=admin
+#指定数据库驱动
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
